--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
 </head>
 <body>
     <header>
+        <div class="contentWrapper">
         <!-- Login Menu -->
-        <!-- Nav Menu -->
-        <nav>
+            <nav id="utilityMenu">
+            </nav> 
+            <nav>
+            <!-- Nav Menu -->
             <ul>
-                <li><a href="#"><img src="Assets/Facebook.png" alt="Facebook" border="0"></a></li>
-                <li><a href="#"><img src="./Assets/TikTok.png" alt="TikTok" border="0"></a></li>
-                <li><a href="#"><img src="./Assets/Twitter.png" alt="Twitter" border="0"></a></li>
-                <li><a href="#"><img src="./Assets/Safari.png" alt="Safari" border="0"></a></li>
-                <li><a href="#" class=""active>Welcome</a></li>
-                <li><a href="#" class=""active>Join</a></li>
+                <li><a href="#"><img src="Assets/Facebook.png" alt="Facebook" border="0" class="socialIcon"></a></li>
+                <li><a href="#"><img src="./Assets/TikTok.png" alt="TikTok" border="0" class="socialIcon"></a></li>
+                <li><a href="#"><img src="./Assets/Twitter.png" alt="Twitter" border="0" class="socialIcon"></a></li>
+                <li><a href="#"><img src="./Assets/Safari.png" alt="Safari" border="0" class="socialIcon"></a></li>
+            </ul>    
+            <nav id="utilityMenu">
+                <ul>
+                    <li class="accNav"><a href="#" class=""active>Welcome</a></li>
+                    <li class="acctNav"><a href="#" class=""active>Join</a></li>
             </ul>
+        </nav>   
         </nav>
-        <h1>Judge Your Quirk</h1>
+        <h1>Quirkville</h1>
         <nav>
             <ul>
                 <li><a href="#">About</a></li>
@@ -30,50 +37,56 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        </div>
     </header>
-    <section id="sidebar">
-        <!-- Sidebar Text -->
-        <h1>Quirk Connection</h1>
-        <p>
-            We are proud of you for taking the steps to grow into whom YOU want to be, find others in this amazing world,and find the possibility to be the best version you can be, with the help of others similar to you. Each page is unique in their own way and we are excited knowing that you will be plugged into a community calling your name. Have fun. Heck, you never know who you'll find on the other side of a click. Be You. Feel Free. Embrace Your Being.
-        </p>
-        <br/>
+    <!-- Sidebar Text -->    
+    <div class="contentWrapper">  
+        <section id="sidebar"> 
+            <h1>Quirk Connection</h1>
+            <p>
+                We are proud of you for taking the steps to grow into whom YOU want to be, find others in this amazing world,and find the possibility to be the best version you can be, with the help of others similar to you. Each page is unique in their own way and we are excited knowing that you will be plugged into a community calling your name. Have fun. Heck, you never know who you'll find on the other side of a click. Be You. Feel Free. Embrace Your Being.
+            </p>
+       
     </section>
-    <section>
+    </div>
+        <br/>
         <!-- Main Section -->
+    <section id="main" class="contentWrapper">   
         <h1>Defining Your Path</h1>
-        <!-- Six Diff Quirk Styles -->
+        <!-- Five Diff Quirk Styles -->
         <div class="panel">
-            <img src="./Assets/Quirkless.png" class="quirk" alt=""/>
+            <img src="./Assets/Quirkless.png" class="quirk" alt="Crowd of People"/>
             <h2>Quirkless</h2>
-            <p>Among the 20% here lies the No Quirks. Fear not, these individuals still have hearts of warriors, minds of geniuses, and built this world from the ground up, with their bare hands. Despite not being "superhumans", they still have the super abilities to inspire and change lives.</p>
+            <p>Among the 20% here lies the No Quirks. Despite not being "superhumans", they still have the super abilities to inspire and change lives.</p>
             <button>I Am Here</button>
         </div>
         <div class="panel">
             <img src="./Assets/Quirkennjoyers.png" class="quirk" alt=""/>
             <h2>Quirk Enjoyers</h2>
-            <p>I get it, why does one have to grow up to be what mommy and daddy wants them to be. Why does one have to decide how they have to live their life with their Quirk? Quit stressing if your Quirk is "quality worth" to change the world, or that it's not "cool enough" for an Academy. You Matter, and that's the point. Enjoy the blessing bestowed on you. Love Yo'self and Yo' Quirk. Just make sure you still get it licensed to use in public.</p>
+            <p>I get it, why does one have to grow up to be what mommy and daddy wants them to be. Or, why stress your Quirk isn't heroic enough. Enjoy your gift with others. Just make sure you still get it licensed to use in public.</p>
             <button>I Am Here</button>
         </div>
         <div class="panel">
             <img src="./Assets/Students.png" class="quirk" alt=""/>
             <h2>Students</h2>
-            <p>Competition will never leave your site, however homework will. What school are you attending? What agency are you looking forward to? It's amazing seeing youths working as hard as Hero's, putting time in and out to be better than the Old G's. Who are you going to surpass? Connect with other students, you never who will be your Boss, your employer, even your partner. Help out others, as you're helping yourself, and keep grinding to the Top.</p>
+            <p>Competition will never leave your site, however homework will. Connect with other students, you never who you'll find. Help out others, as you're helping yourself, and keep grinding to the Top.</p>
             <button>I Am Here</button>
         </div>
         <div class="panel">
             <img src="./Assets/Heros.png" class="quirk" alt=""/>
             <h2>Hero's</h2>
-            <p>Thank you for your service. Without you, we would be DOOMED. Without teamwork, you probably wouldn't have saved the day. With all the "Thank You's" and camera's in your face, here, you can relax. No calls, no news, no outside work source, just peace with other Hero's. Here's a platform to let loose and be You, outside of your Heroic Duties. </p>
+            <p> With all the "Thank You's" and camera's in your face, here, you can relax. No calls, no news, no outside work source, just peace with other Hero's.</p>
             <button>I Am Here</button>
         </div>
         <div class="panel">
             <img src="./Assets/Villians.png" class="quirk" alt=""/>
             <h2>Villians</h2>
-            <p>I cannot discriminate, so yes, you get a page. Just know I am watching (from a far). Obey My Rules, please. My mom said, "If you cannot say anything nice, don't say anything at all;" but you're still the Bad Guys. Have a great day. </p>
+            <p>I cannot discriminate, so yes, you get a page. Just know I am watching (from a far). Obey My Rules, please.</p>
             <button>I Am Here</button>
         </div>
+    </section>    
     </section>
+    <div class="clear"></div>
     <footer>
         <!-- Legal items, Nav Items -->
         <span>&copy; 2022</span>
