Updated background information and image

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             <nav>
             <!-- Nav Menu -->
             <ul>
-                <li><a href="#"><img src="Assets/Facebook.png" alt="Facebook" border="0" class="socialIcon"></a></li>
-                <li><a href="#"><img src="./Assets/TikTok.png" alt="TikTok" border="0" class="socialIcon"></a></li>
-                <li><a href="#"><img src="./Assets/Twitter.png" alt="Twitter" border="0" class="socialIcon"></a></li>
-                <li><a href="#"><img src="./Assets/Safari.png" alt="Safari" border="0" class="socialIcon"></a></li>
+                <li><a href="#"><img src="Assets/Facebook.png" alt="Facebook" height="32" width="32" class="socialIcon"></a></li>
+                <li><a href="#"><img src="./Assets/TikTok.png" alt="TikTok" height="32" width="32" class="socialIcon"></a></li>
+                <li><a href="#"><img src="./Assets/Safari.png" alt="Safari" height="32" width="32" class="socialIcon"></a></li>
             </ul>    
             <nav id="utilityMenu">
                 <ul>
