--- a/index.html
+++ b/index.html
@@ -51,45 +51,55 @@
         <br/>
         <!-- Main Section -->
     <section id="main" class="contentWrapper">   
-        <h1>Defining Your Path</h1>
-        <!-- Five Diff Quirk Styles -->
+            <h1>Defining Your Path</h1>
+            <!-- Five Diff Quirk Styles -->
+            <div class="panel">
+                <header style="text-align: center">
+                <img src="./Assets/Quirkless.png" class="quirk" alt="Crowd of People"/>
+                <h2>Quirkless</h2>
+                <p>Among the 20% here lies the No Quirks. Despite not being "superhumans", they still have the super abilities to inspire and change lives.</p>
+                <button>I Am Here</button>
+            </header>
+            </div>
+            <div class="panel">
+                <header style="text-align: center">
+                <img src="./Assets/Quirkennjoyers.png" class="quirk" alt=""/>
+                <h2>Quirk Enjoyers</h2>
+                <p>I get it, why does one have to grow up to be what mommy and daddy wants them to be. Or, why stress your Quirk isn't heroic enough. Enjoy your gift with others. Just make sure you still get it licensed to use in public.</p>
+                <button>I Am Here</button>
+            </div>
         <div class="panel">
-            <img src="./Assets/Quirkless.png" class="quirk" alt="Crowd of People"/>
-            <h2>Quirkless</h2>
-            <p>Among the 20% here lies the No Quirks. Despite not being "superhumans", they still have the super abilities to inspire and change lives.</p>
-            <button>I Am Here</button>
-        </div>
-        <div class="panel">
-            <img src="./Assets/Quirkennjoyers.png" class="quirk" alt=""/>
-            <h2>Quirk Enjoyers</h2>
-            <p>I get it, why does one have to grow up to be what mommy and daddy wants them to be. Or, why stress your Quirk isn't heroic enough. Enjoy your gift with others. Just make sure you still get it licensed to use in public.</p>
-            <button>I Am Here</button>
-        </div>
-        <div class="panel">
+            <header style="text-align: center">
             <img src="./Assets/Students.png" class="quirk" alt=""/>
             <h2>Students</h2>
             <p>Competition will never leave your site, however homework will. Connect with other students, you never who you'll find. Help out others, as you're helping yourself, and keep grinding to the Top.</p>
-            <button>I Am Here</button>
+            <button>I Am Here</button> 
+        </header>
         </div>
         <div class="panel">
+            <header style="text-align: center">
             <img src="./Assets/Heros.png" class="quirk" alt=""/>
             <h2>Hero's</h2>
             <p> With all the "Thank You's" and camera's in your face, here, you can relax. No calls, no news, no outside work source, just peace with other Hero's.</p>
             <button>I Am Here</button>
+        </header>
         </div>
         <div class="panel">
+            <header style="text-align: center">
             <img src="./Assets/Villians.png" class="quirk" alt=""/>
             <h2>Villians</h2>
             <p>I cannot discriminate, so yes, you get a page. Just know I am watching (from a far). Obey My Rules, please.</p>
             <button>I Am Here</button>
+        </header>
+        </div>
         </div>
     </section>    
-    </section>
-    <div class="clear"></div>
-    <footer>
-        <!-- Legal items, Nav Items -->
-        <span>&copy; 2022</span>
-        <ul id="menuFooter">
+</section>
+<div class="clear"></div>
+<footer>
+    <!-- Legal items, Nav Items -->
+    <span>&copy; 2022</span>
+    <ul id="menuFooter">
             <li><a href="#">Sitemap</a></li>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Terms of Use</a></li>
