updating changeds made to the page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- Five Diff Quirk Styles -->
             <div class="panel">
                 <header style="text-align: center">
-                <img src="./Assets/Quirkless.png" class="quirk" alt="Crowd of People"/>
+                <img src="./Assets/Quirkless.png" class="quirk" alt="Two kids playing in the water"/>
                 <h2>Quirkless</h2>
                 <p>Among the 20% here lies the No Quirks. Despite not being "superhumans", they still have the super abilities to inspire and change lives.</p>
                 <button>I Am Here</button>
@@ -63,14 +63,14 @@
             </div>
             <div class="panel">
                 <header style="text-align: center">
-                <img src="./Assets/Quirkennjoyers.png" class="quirk" alt=""/>
+                <img src="./Assets/Quirkennjoyers.png" class="quirk" alt="A crowd of kids entering a building"/>
                 <h2>Quirk Enjoyers</h2>
                 <p>I get it, why does one have to grow up to be what mommy and daddy wants them to be. Or, why stress your Quirk isn't heroic enough. Enjoy your gift with others. Just make sure you still get it licensed to use in public.</p>
                 <button>I Am Here</button>
             </div>
         <div class="panel">
             <header style="text-align: center">
-            <img src="./Assets/Students.png" class="quirk" alt=""/>
+            <img src="./Assets/Students.png" class="quirk" alt="UA Students"/>
             <h2>Students</h2>
             <p>Competition will never leave your site, however homework will. Connect with other students, you never who you'll find. Help out others, as you're helping yourself, and keep grinding to the Top.</p>
             <button>I Am Here</button> 
@@ -78,7 +78,7 @@
         </div>
         <div class="panel">
             <header style="text-align: center">
-            <img src="./Assets/Heros.png" class="quirk" alt=""/>
+            <img src="./Assets/Heros.png" class="quirk" alt="Heros' sitting at a table"/>
             <h2>Hero's</h2>
             <p> With all the "Thank You's" and camera's in your face, here, you can relax. No calls, no news, no outside work source, just peace with other Hero's.</p>
             <button>I Am Here</button>
@@ -86,13 +86,13 @@
         </div>
         <div class="panel">
             <header style="text-align: center">
-            <img src="./Assets/Villians.png" class="quirk" alt=""/>
+            <img src="./Assets/Villians.png" class="quirk" alt="Villians "/>
             <h2>Villians</h2>
             <p>I cannot discriminate, so yes, you get a page. Just know I am watching (from a far). Obey My Rules, please.</p>
             <button>I Am Here</button>
         </header>
         </div>
-        </div>
+    </div>
     </section>    
 </section>
 <div class="clear"></div>
